--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+1.3.2
+===============
++ Added a 404 check for Instagram links
+
+1.3.1
+===============
++ BTD's lightboxes can be closed with Escape key
 1.3.0
 ===============
 Features:
