--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+1.3.3
+===============
++ The tweet-action links in BTD's lightboxes work like the default ones
+
 1.3.2
 ===============
 + Added a 404 check for Instagram links
