[Meta] Updated NEWS & manifest.json

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+1.4.0
+===============
++ Emojis are now supported!
++ Soundcloud and Bandcamp are supported in thumbnails
+
 1.3.3
 ===============
 + The tweet-action links in BTD's lightboxes work like the default ones
