--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+1.4.5
+===============
++ You can now add emojis easily in your tweets thank to the "Emojis" button in the Compose panel!
++ Thumbnails should be lighter to load.
++ Thumbnails for every images are now supported!
++ Emojis are now all supported (almost?) perfectly and should be faster to load
++ Minors improvements and bugfixes
+
 1.4.0
 ===============
 + Emojis are now supported!
