--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+1.5.0
+===============
++ Minimal mode!
++ A LOT of things got improved in the way they're coded
++ Some annoying "bugs" were crushed, yay!
+
 1.4.8
 ===============
 + A lot of functions has been rewritten for better performances
