--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+1.5.1
+===============
++ No more using <all_urls>
++ Improvements for the Minimal mode
++ Fixed URLs in profiles
+
 1.5.0
 ===============
 + Minimal mode!
