Added a nice header in options page

--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -10,6 +10,9 @@
 	"optionsPageTitle": {
 		"message": "Better TweetDeck Settings"
 	},
+	"Settings": {
+		"message": "Settings"
+	},
 	"OptsGeneral": {
 		"message": "General"
 	},
