--- a/source/_locales/fr/messages.json
+++ b/source/_locales/fr/messages.json
@@ -11,6 +11,9 @@
     "message": "Réglages de Better TweetDeck",
     "description": "Titre de la page des options"
   },
+  "Settings": {
+    "message": "Options"
+  },
   "OptsGeneral": {
     "message": "Général"
   },
