--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 2.0.0
 ===============
 - A new version completely re-written! Harder, Better, Faster, Stronger!
+- You can now make new tweets "flash"
 - A new nicer and eaiser to use Options page
 - Tons of optimizations, bug fixes and improvements for an even better experience!
 
