--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
 	"appDesc": {
-		"message": "Emojis, thumbnails and advanced features for TweetDeck !",
+		"message": "Emojis, thumbnails and advanced features for http://tweetdeck.twitter.com !",
 		"description": "The description of the application, displayed in the web store."
 	},
 	"appName": {
@@ -16,6 +16,9 @@
 	"onInstallP2": {
 		"message": "If you already installed Better TweetDeck on a computer synchronised with your Google Chrome™ account, your settings may be automatically synced."
 	},
+	"onInstallP3": {
+	    "message": "This extension is designed for http://tweetdeck.twitter.com, it WILL NOT work with \"TweetDeck for Chrome\" "
+	  },
 	"FlashTweets": {
 		"message": "Make new tweets flash in:"
 	},
