--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -56,7 +56,7 @@
 		"message": "Changelog"
 	},
 	"Author": {
-		"message": "Auteur"
+		"message": "Author"
 	},
 	"Contributors": {
 		"message": "Contributors / Early testers"
