--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -128,7 +128,7 @@
 		"message": "Full name"
 	},
 	"minimalMode": {
-		"message": "Enabled the \"Minimal\" mode"
+		"message": "Enable the \"Minimal\" mode"
 	},
 	"narrowColumns": {
 		"message": "Columns take less space"
@@ -161,7 +161,7 @@
 		"message": "Display only one thumbnail per tweet"
 	},
 	"thumbnailsfrom": {
-		"message": "Display thumbnails from :"
+		"message": "Display thumbnails from:"
 	},
 	"previewTweet": {
 		"message": "Tweet preview"
