updated changelog and stuff

--- a/source/_locales/de/messages.json
+++ b/source/_locales/de/messages.json
@@ -79,6 +79,9 @@
 	"AuthorWeb": {
 		"message": "Autoren-Webseite"
 	},
+	"MakeADonation": {
+		"message": "Spenden Sie"
+	},
 	"Ressources": {
 		"message": "Benutzte Ressourcen"
 	},
