--- a/source/_locales/fr/messages.json
+++ b/source/_locales/fr/messages.json
@@ -62,6 +62,9 @@
   "AuthorWeb": {
     "message": "Site web de l'auteur"
   },
+  "MakeADonation": {
+    "message": "Faire un don"
+  },
   "Links": {
     "message": "Liens"
   },
