Add the option to disable "Share on (Better) TweetDeck" button
Fixes #25
Also button message now localized

--- a/source/_locales/en/messages.json
+++ b/source/_locales/en/messages.json
@@ -169,6 +169,9 @@
 	"tcoRemoval": {
 		"message": "Remove the http://t.co from links"
 	},
+	"shareButton": {
+		"message": "Add the \"Share on Better TweetDeck\" action on contexctual menu"
+	},
 	"shortText": {
 		"message": "Shorten the selected text while using the \"Share on Better TweetDeck\" action"
 	},
@@ -201,6 +204,8 @@
 	},
 	"allTweets": {
 		"message": "All tweets"
+	},
+	"shareOnBTD": {
+		"message": "Share on (Better) TweetDeck"
 	}
-
 }
