--- a/source/_locales/fr/messages.json
+++ b/source/_locales/fr/messages.json
@@ -169,6 +169,9 @@
     "message": "Supprimer la redirection des liens en http://t.co"
   },
   "shortText": {
+    "message": "Affiche le boutton de partage dans le menu contextuel"
+  },
+  "shortText": {
     "message": "Raccourcir le texte sélectionné lors du partage par menu contextuel"
   },
   "RestartChrome": {
@@ -200,5 +203,8 @@
   },
   "allTweets": {
     "message": "Tous les nouveaux tweets"
+  },
+  "shareOnBTD": {
+    "message": "Partager avec (Better) TweetDeck"
   }
 }
