--- a/source/_locales/de/messages.json
+++ b/source/_locales/de/messages.json
@@ -17,28 +17,28 @@
 		"message": "Wenn du Better TweetDeck bereits auf einem anderen Computer installiert hast, sollten deine Einstellungen automatisch synchronisiert werden."
 	},
 	"onInstallP3": {
-	    "message": "Diese Extension wurde für http://tweetdeck.twitter.com designed und funktioniert NICHT mit \"TweetDeck for Chrome\" "
-	  },
+	    "message": "Diese Erweiterung wurde für http://tweetdeck.twitter.com designt und funktioniert NICHT mit \"TweetDeck for Chrome\" "
+  },
   "onUpdateH1": {
-  	"message": "Thanks for using Better TweetDeck"
+  	"message": "Danke, dass du Better TweetDeck verwendest"
 	},
 	"onUpdateP1": {
-		"message": "You're now more than 4000 to use Better TweetDeck, that's awesome!"	
+		"message": "Ihr seid jetzt über 4000 Leute, die Better TweetDeck verwenden. Das ist fantastisch!"	
 	},
 	"onUpdateP2": {
-		"message": "However, even if Better TweetDeck is  free, it takes time to be developed, and time has value."
+		"message": "Obwohl Better TweetDeck gratis ist, braucht es doch Zeit, um entwickelt zu werden, und Zeit ist wertvoll."
 	},
 	"onUpdateP3": {
-		"message": "This is why it would be awesome if you could <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ'>do a donation</a> (<strong>only</strong > if you can afford it!). It would help me to spend more time on making Better TweetDeck even more awesome!"
+		"message": "Deswegen wäre es toll, wenn du<a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9TXC4TVXGL6PJ'>etwas spenden</a> könntest (<strong>nur</strong > wenn du dir das leisten kannst!). Es würde mir helfen, mehr Zeit damit zu verbringen, Better TweetDeck noch besser zu machen!"
 	},
 	"FlashTweets": {
 		"message": "Neue Tweets blinken in:"
 	},
 	"FlashTweetsMentions": {
-		"message": "\"Erwähnungen\" & \"Interactionen\" Spalte"
+		"message": "\"Erwähnungen\" & \"Interaktionen\" Spalten"
 	},
 	"FlashTweetsAll": {
-		"message": "Jede Spalte"
+		"message": "Jeder Spalte"
 	},
 	"FlashTweetsFalse": {
 		"message": "Nirgends"
@@ -89,10 +89,10 @@
 		"message": "Fehler oder Anregungen"
 	},
 	"AuthorWeb": {
-		"message": "Autoren-Webseite"
+		"message": "Website des Autors"
 	},
 	"MakeADonation": {
-		"message": "Spenden Sie"
+		"message": "Spenden"
 	},
 	"Ressources": {
 		"message": "Benutzte Ressourcen"
@@ -122,10 +122,10 @@
 		"message": "Relativ (1m, 2h, 3d...)"
 	},
 	"timeAbsolute": {
-		"message": "Absolut (dd/mm/yy hh:mm)"
+		"message": "Absolut (TT/MM/JJ hh:mm)"
 	},
 	"timeAbsoluteUS": {
-		"message": "Absolut 'US-Style' (mm/dd/yy hh:mm)"
+		"message": "Absolut 'US-Style' (MM/TT/JJ hh:mm)"
 	},
 	"absoluteAfter24h": {
 		"message": "Zeige volles Datum erst nach 24h"
@@ -169,14 +169,17 @@
 	"tcoRemoval": {
 		"message": "Entferne http://t.co von Links"
 	},
+	"shareButton": {
+		"message": "\"Auf Better TweetDeck teilen\" dem Kontextmenü hinzufügen"
+	},
 	"shortText": {
-		"message": "Kürze den selektierten Text bei der Nutzung von \"Share on Better TweetDeck\""
+		"message": "Kürze den markierten Text bei der Nutzung von \"Auf Better TweetDeck teilen\""
 	},
 	"RestartChrome": {
 		"message": "Wird beim nächsten Neustart von Chrome übernommen"
 	},
 	"playButtonYT": {
-		"message": "Verstecke den 'Play'-Button auf YouTube-Thumbnails"
+		"message": "Verstecke den 'Play'-Knopf auf YouTube-Thumbnails"
 	},
 	"noBgModals": {
 		"message": "Keinen Hintergrund bei Vollbildvorschau anzeigen"
@@ -201,6 +204,8 @@
 	},
 	"allTweets": {
 		"message": "Alle Tweets"
+	},
+	"shareOnBTD": {
+		"message": "Auf (Better) TweetDeck teilen"
 	}
-
 }
