commit your stuff, kids 	modified:   source/_locales/de/messages.json

--- a/source/_locales/de/messages.json
+++ b/source/_locales/de/messages.json
@@ -29,7 +29,7 @@
 		"message": "Obwohl Better TweetDeck gratis ist, braucht es doch Zeit, um entwickelt zu werden, und Zeit ist wertvoll."
 	},
 	"onUpdateP3": {
-		"message": "Deswegen wäre es toll, wenn du<a href='https://www.paypal.me/DErambert'>etwas spenden</a> könntest (<strong>nur</strong > wenn du dir das leisten kannst!). Es würde mir helfen, mehr Zeit damit zu verbringen, Better TweetDeck noch besser zu machen!"
+		"message": "Deswegen wäre es toll, wenn du<a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>etwas spenden</a> könntest (<strong>nur</strong > wenn du dir das leisten kannst!). Es würde mir helfen, mehr Zeit damit zu verbringen, Better TweetDeck noch besser zu machen!"
 	},
 	"FlashTweets": {
 		"message": "Neue Tweets blinken in:"
