--- a/source/_locales/es/messages.json
+++ b/source/_locales/es/messages.json
@@ -29,7 +29,7 @@
 		"message": "De cualquier manera, a pesar de que Better TweetDeck es gratuito, toma tiempo de desarrollo y el tiempo es valioso."
 	},
 	"onUpdateP3": {
-		"message": "Es por ello que sería genial si pudieras hacer <a href='https://www.paypal.me/DErambert'>una donación</a> (<strong>sólo</strong> si está en tus posibilidades). Esto me ayudará a tener más tiempo para hacer Better TweetDeck aún más asombroso!"
+		"message": "Es por ello que sería genial si pudieras hacer <a href='https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=XK9SQ6ZDE9UF2&lc=US&item_name=Damien%20Erambert&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted'>una donación</a> (<strong>sólo</strong> si está en tus posibilidades). Esto me ayudará a tener más tiempo para hacer Better TweetDeck aún más asombroso!"
 	},
 	"FlashTweets": {
 		"message": "Hacer que nuevos tweets parpadeen:"
