localization impl finished

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -10,10 +10,78 @@
   "sec_tweetsName": { "message": "Tweets: name & time" },
   "sec_tweetsDisplay": { "message": "Tweets: display" },
   "sec_interface": { "message": "Interface" },
-  "sec_content": { "message": "Content2" },
+  "sec_content": { "message": "Content" },
   "sec_welcome": { "message": "Welcome" },
   "sec_credits": { "message": "Credits / About" },
   "sec_debug": { "message": "Debug Infos" },
   "sec_links": { "message": "Links" },
-  "sec_donate": { "message": "Donate" }
+  "sec_donate": { "message": "Donate" },
+  "sec_preview": { "message": "Preview" },
+  "sec_general": { "message": "General" },
+
+  "title_timeDisplay": { "message": "Time display style"},
+  "time_relative": { "message": "Relative" },
+  "time_absolute": { "message": "Absolute" },
+  "time_absolute_us": { "message": "Absolute US Style" },
+  "time_custom": { "message": "Custom" },
+  "time_short": { "message": "Short" },
+  "time_full": { "message": "Full" },
+  "time_full24": { "message": "Display full date after 24h" },
+
+  "title_nameDisplay": { "message": "Name display style" },
+
+  "name_full_user": { "message": "Full name @Username" },
+  "name_inverted": { "message": "@Username Full name" },
+  "name_username": { "message": "@Username" },
+  "name_full": { "message": "Full name" },
+  "name_typeahead": { "message": "The auto-completion displays only usernames" },
+
+  "title_avatars": { "message": "Avatars & details" },
+  "css_round_pic": { "message": "Rounded avatars" },
+  "css_show_verified": { "message": "Show 'verified' badges" },
+  "css_hide_context": { "message": "Hide 'In reply to' label on mentions" },
+  "css_actions_on_right": { "message": "Show tweet actions on the right" },
+  "css_actions_on_hover": { "message": "Show tweet actions on hover" },
+  "no_hearts": { "message": "Show stars instead of hearts" },
+  "rtl_text_style": { "message": "Detect and apply RLT style when needed" },
+  "flash_tweets": { "message": "Make tweets flash in:" },
+  "flash_tweets_mentions": { "message": "Mentions columns" },
+  "flash_tweets_all": { "message": "Every column" },
+
+  "share_btd_item": { "message": "Add the 'Share on Better TweetDeck' action on contextual menu <small>Will be applied at next Chrome restart</small>" },
+  "share_short_txt": { "message": "Shorten the selected text while using the 'Share on Better TweetDeck' action <small>Will be applied at next Chrome restart</small>" },
+  "no_tco": { "message": "Remove t.co redirection on links" },
+  "stop_autoplay_gifs": { "message": "Don't autoplay GIFs in columns" },
+  "thumbnails_from": { "message": "Display thumbnails from:" },
+
+  "css_minimal_mode": { "message": "Enable the 'Minimal' mode" },
+  "css_no_play_btn": { "message": "Hide the play button on video thumbnails" },
+  "css_no_col_icns": { "message": "Hide icons in columns headers" },
+  "css_small_icns_compose": { "message": "Icons are smaller in the Compose panel" },
+  "css_gray_icns_notifs": { "message": "Notifications icons are in grayscale" },
+
+  "btd_thx": { "message": "Thanks for installing Better TweetDeck!" },
+  "btd_get_started": { "message": "Let's get started!" },
+  "btd_whatsBTD": { "message": "Better TweetDeck is made to improve your experience on <a href='https://tweetdeck.twitter.com'>tweetdeck.twitter.com</a>!" },
+  "btd_default": { "message": "The default settings have been applied, feel free to modify them to your liking!" },
+  "btd_then": { "message": "Then?" },
+  "btd_follow": { "message": "You should follow <a href='https://twitter.com/BetterTDeck'>@BetterTDeck</a> on Twitter for support, news and trivia about Better TweetDeck!" },
+
+  "sec_infos": { "message": "Informations" },
+  "debug_version": { "message": "Version" },
+  "debug_ua": { "message": "User-Agent" },
+  "sec_settings": { "message": "Settings dump" },
+
+  "sec_credits":  { "message": "Credits / About" },
+  "credits_author":  { "message": "Author" },
+  "credits_contribs":  { "message": "Contributors" },
+  "credits_rsrc":  { "message": "Ressources used" },
+  "credits_links":  { "message": "Links" },
+  "credits_twitter":  { "message": "Better TweetDeck on Twitter" },
+  "credits_bugs":  { "message": "Bugs or suggestions" },
+  "credits_source":  { "message": "Source on GitHub" },
+  "credits_author":  { "message": "Author's website" },
+
+  "save_no":  { "message": "No changes" },
+  "save_save":  { "message": "Save changes" }
 }
