--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-3.0.0 "Half-Life 3"
+3.0.0 Codename "Half-Life 3"
 ===============
 - [Meta] Completely re-written in ES2015 with modules for a more maintainable code
-- [Meta] Faster than 2.x, more reliable and nicer on ressources
+- [Meta] Faster than 2.x, more reliable and nicer on resources
 - [Feature] Stop the autoplay of GIFs
 - [Feature] Verified badge in the columns
 - [Feature] Updated Minimal theme for dark/white + more reliable support of it
