--- a/src/_locales/fr/messages.json
+++ b/src/_locales/fr/messages.json
@@ -39,6 +39,7 @@
 
   "title_avatars": { "message": "Avatars & détails" },
   "css_round_pic": { "message": "Avatars ronds" },
+  "css_bigger_emojis": { "message": "Bigger emojis in tweets" },
   "css_show_verified": { "message": "Affiche les badges 'vérifié'" },
   "css_hide_context": { "message": "Masquer 'In reply to' sur les mentions" },
   "css_actions_on_right": { "message": "Afficher les actions de tweets sur la droite" },
